--- a/AdHoc/res/values/strings.xml
+++ b/AdHoc/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="app_name">AdHoc</string>
+    <string name="app_id">575878422500726</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_event_list">EventListActivity</string>
