--- a/AdHoc/res/values/strings.xml
+++ b/AdHoc/res/values/strings.xml
@@ -5,13 +5,20 @@
     <string name="app_id">575878422500726</string>
     <string name="login_button_fb">Log in with Facebook</string>
     <string name="login_title">Ad Hoc Event</string>
-
     <string name="title_activity_event_list">EventListActivity</string>
     <string name="title_activity_event_details">EventDetailsActivity</string>
     <string name="title_activity_create_event">CreateEventActivity</string>
     <string name="title_activity_location">LocationActivity</string>
-    
     <string name="abCreate">Create Event</string>
     <string name="abMap">Map</string>
     <string name="abList">List of Events</string>
+    <string name="minAtt">Min Attendees:</string>
+    <string name="maxAtt">Max Attendees:</string>
+    <string name="desc">Description:</string>
+    <string name="descBody">Input an optional description here!</string>
+    <string name="timeDesc">Time of Event:</string>
+    <string name="title_activity_create_event_map">CreateEventMapActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
+
 </resources>
