--- a/AdHoc/res/values/strings.xml
+++ b/AdHoc/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="action_logout">Log Out</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="save">Save</string>
 
 </resources>
