--- a/AdHoc/res/values/strings.xml
+++ b/AdHoc/res/values/strings.xml
@@ -22,5 +22,7 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="save">Save</string>
+    <string name="startTime">Event start time:</string>
+    <string name="endTime">Event end time:</string>
 
 </resources>
