Location get for the event is working
Location is an activity that gets triggered on text focus
Fixed a few things from Brian checkins . Brian please let me know if I
broke some thing.

--- a/AdHoc/res/values/strings.xml
+++ b/AdHoc/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="save">Save</string>
     <string name="startTime">Event start time:</string>
     <string name="endTime">Event end time:</string>
-
+    <string name="location">Location:</string>
+    
 </resources>
