--- a/AdHoc/res/values/strings.xml
+++ b/AdHoc/res/values/strings.xml
@@ -25,5 +25,10 @@
     <string name="startTime">Event start time:</string>
     <string name="endTime">Event end time:</string>
     <string name="location">Location:</string>
+    <string name="errSaveEventTitle">Error saving event</string>
+    <string name="OK">OK</string>
+    <string name="errSaveEventMsg">Sorry but this event is finished or cancelled, please join another event</string>
+    <string name="dialogStartTime">Start Time</string>
+    <string name="dialogEndTime">End Time</string>
     
 </resources>
