-add progress bar to details (based on % attendance) -card style view for list -bug fix: click save w/o marking on creation page -add 1 min to times on creation screen -add saving pb on creation page

--- a/AdHoc/res/values/strings.xml
+++ b/AdHoc/res/values/strings.xml
@@ -42,5 +42,6 @@
     <string name="errMissingDataTitle">Missing data in field</string>
     <string name="hintStartTime">Click to select a start time</string>
     <string name="getData">Getting event data...</string>
+    <string name="saving">Saving...</string>
     
 </resources>
