--- a/AdHoc/res/values/strings.xml
+++ b/AdHoc/res/values/strings.xml
@@ -32,11 +32,12 @@
     <string name="dialogStartTime">Start Time</string>
     <string name="dialogEndTime">End Time</string>
     <string name="errSetTime">Error with setting time</string>
-    <string name="errLowEnd">End time is not greater than start time</string>
-    <string name="errHighStart">Start time is greater than end time</string>
-    <string name="errLowTime">Time is before current time</string>
-    <string name="errNoEvent">No event selected</string>
-    <string name="errNoAtt">Please input max amount of people who can join the event</string>
+    <string name="errLowEnd">End time needs to be after start time</string>
+    <string name="errHighStart">Start time needs to be before end time</string>
+    <string name="errLowTime">That time is before the current time</string>
+    <string name="errNoEvent">Please choose a sport</string>
+    <string name="errNoAtt">You never told me how many people can join!</string>
+    <string name="errLowAtt">Can't have fun with that many people!</string>
     <string name="errNoLoc">No location selected</string>
     <string name="errNoStartTime">Please select a start time</string>
     <string name="errNoEndTime">Please select an end time</string>
