-UI feedback updates

--- a/AdHoc/res/values/strings.xml
+++ b/AdHoc/res/values/strings.xml
@@ -24,11 +24,11 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="save">Save</string>
-    <string name="startTime">Event start time:</string>
-    <string name="endTime">Event end time:</string>
+    <string name="startTime">Start time:</string>
+    <string name="endTime">End time:</string>
     <string name="location">Location</string>
     <string name="locationCreate">Location:</string>
-    <string name="chooseSport">Choose a Sport</string>
+    <string name="chooseSport">Choose a Sport:</string>
     <string name="errSaveEventTitle">Error saving event</string>
     <string name="OK">OK</string>
     <string name="errSaveEventMsg">Sorry but this event is finished or cancelled, please join another event</string>
